# lora-finetune-practice

./: .env.example  .envrc.example  .gitignore  README.md  fine_tune_practice.ipynb  fine_tuning_practice.py  inference.py  pyproject.toml
project_tools/: combine_code.py
scripts/: run_tests.sh  upload_lora_to_hub.py
tests/: test_inference_utils.py  test_training_config.py
